# Hizcode

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: lib.rs  mock.rs  traits.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
protocol/src/: events.rs  lib.rs
tui/: Cargo.toml
tui/src/: app.rs  lib.rs  ui.rs
