[workspace]
members = [
    "protocol",
    "backend",
    "core",
    "tui",
    "cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
async-trait = "0.1"
parking_lot = "0.12"
protocol = { path = "./protocol" }
backend = { path = "./backend" }
core = { path = "./core" }
tui = { path = "./tui" }
